@@ -22,8 +22,8 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2011-04-06</date>
- <time>01:42:00</time>
+ <date>2011-04-11</date>
+ <time>00:35:47</time>
  <version>
   <release>2.0.1</release>
   <api>2.0.0</api>
@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
-* 
+* [mms] Fix imap filtering using envelope data (Bug #9859).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -916,7 +916,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-04-06</date>
+   <date>2011-04-11</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
 * 
